data/usersCode/rtbrg/question1/error.txt
/home/gauravghati/clash2/data/usersCode/rtbrg/question1/code1-3.cpp:1:1: error: ‘gkjdlfk’ does not name a type
 gkjdlfk fgf dgf
 ^~~~~~~
